Some more tweaks

--- a/cfg/server.cfg
+++ b/cfg/server.cfg
@@ -1,4 +1,13 @@
 mp_autoteambalance 0
 mp_limitteams 0
+mp_friendlyfire 1
+mp_solid_teammates 1
+mp_forcecamera 1
 writeid
 writeip
+ip 0.0.0.0
+
+log on
+mp_logdetail 3
+
+bot_difficulty 4
